[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3dlib"
version = "1.3.0"
authors = [
  { name="Frank Zaverl, Jr.", email="fzaverl@s3dlib.org" },
]
description = "Python classes to create 3D surface and line objects rendered in Matplotlib"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Documentation = "https://s3dlib.org"
Repository = "https://github.com/fzaverl/s3dlib"
